add Docker configuration, FastAPI setup, and scroll indicator component

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+fast_api_bakend/.vscode
+fast_api_bakend/.idea
+fast_api_bakend/.DS_Store
+fast_api_bakend/*.pyc
+fast_api_bakend/__pycache__
+fast_api_bakend/.pytest_cache
+fast_api_bakend/.mypy_cache
+fast_api_bakend/.pytest_cache
+fast_api_bakend/.venv
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production
+.
