--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "build": "vite build",
     "deploy": "node deploy.cjs",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "cd backend && npx nodemon ./backend/server.ts"
   },
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -29,6 +35,11 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13",
+    "nodemon": "^3.0.0",
+    "ts-node": "^10.9.1",
+    "mongodb": "^4.1.3"
   }
 }
