--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,16 @@ jobs:
       - name: Build
         run: npm run build
         
+      - name: Copy Nginx config
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          source: "nginx/portfolio.conf"
+          target: "/etc/nginx/conf.d/"
+          strip_components: 1
+
       - name: Deploy to Server
         uses: appleboy/scp-action@master
         with:
@@ -39,4 +49,5 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo systemctl restart apache2
+            sudo nginx -t
+            sudo systemctl restart nginx
