--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: "nginx/portfolio.conf"
+          source: "/portfolio.conf"
           target: "/etc/nginx/conf.d/"
           strip_components: 1
 
