--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -6,7 +6,6 @@ on:
     paths:
       - '.github/workflows/backend.yml'
       - 'fast_api_backend/**'
-      - 'docker-compose.yml'
 
 jobs:
   deploy:
@@ -19,7 +18,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+          logout: false
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
