--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy Frontend
 
 on:
   push:
@@ -21,16 +21,6 @@ jobs:
         
       - name: Build
         run: npm run build
-        
-      - name: Copy Nginx config
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          source: "portfolio.conf"
-          target: "/etc/nginx/conf.d/"
-          strip_components: 1
 
       - name: Deploy to Server
         uses: appleboy/scp-action@master
@@ -51,3 +41,13 @@ jobs:
           script: |
             sudo nginx -t
             sudo systemctl restart nginx
+
+      - name: Enable Apache site
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            sudo a2ensite portfolio.conf
+            sudo systemctl reload apache2
