--- a/.github/workflows/fastapi_code.yml
+++ b/.github/workflows/fastapi_code.yml
@@ -48,7 +48,9 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /var/www/html/portfolio
+            sudo apt-get update
+            sudo apt-get install -y python3-pip
             python3 -m pip install --user pipenv
             export PATH="$PATH:$HOME/.local/bin"
             pipenv install
-            pipenv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+            fastapi run
