--- a/.github/workflows/fastapi_code.yml
+++ b/.github/workflows/fastapi_code.yml
@@ -52,5 +52,9 @@ jobs:
             sudo apt-get install -y python3-pip
             python3 -m pip install --user pipenv
             export PATH="$PATH:$HOME/.local/bin"
-            pipenv install
-            fastapi run
+            # Remove existing virtual environment if it exists
+            rm -rf .venv
+            # Install dependencies from Pipfile
+            pipenv --python 3 install
+            # Start the FastAPI server
+            pipenv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
