--- a/.github/workflows/fastapi_code.yml
+++ b/.github/workflows/fastapi_code.yml
@@ -39,28 +39,13 @@ jobs:
           rm: false
           strip_components: 1
 
-      # Step 5: SSH into the server, install dependencies, and run FastAPI
-      - name: Setup and Run FastAPI
+      # Step 5: Make deploy script executable and run it
+      - name: Run deployment script
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd /var/www/html/portfolio
-            sudo apt-get update
-            sudo apt-get install -y python3-pip
-            python3 -m pip install --user pipenv
-            export PATH="$PATH:$HOME/.local/bin"
-            # Remove existing virtual environment if it exists
-            rm -rf .venv
-            # Install dependencies from Pipfile
-            pipenv --python 3.11 install
-            # Install uvicorn explicitly
-            pipenv install uvicorn
-            # List files to debug
-            ls -la
-            # Kill any existing uvicorn process
-            pkill -f uvicorn || true
-            # Start the FastAPI server using uvicorn in detached mode
-            nohup pipenv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload > uvicorn.log 2>&1 &
+            chmod +x /var/www/html/portfolio/deploy.sh
+            /var/www/html/portfolio/deploy.sh
