Enhance deployment script with MongoDB dependencies and improved logging

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,7 +2,7 @@ name: Deploy FastAPI Backend
 
 on:
   push:
-    branches: [ main ]
+    branches: [ OS ]
     paths:
       - '.github/workflows/backend.yml'
       - 'fast_api_backend/**'
