--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,16 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Copy Public Files
+        run: cp -r public/* dist/ || true  # Ensures the workflow doesn't fail if 'public/' doesn't exist
+
       - name: Deploy to Server
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          source: |
-            dist/*
-            public/*
+          source: "dist/*"
           target: "/var/www/html/"
           strip_components: 1
 
