--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,7 @@ jobs:
               fi
               sudo mv /var/www/html /var/www/html_backup
             fi
+            sudo mkdir -p /var/www/html
 
       - name: Deploy to Server
         uses: appleboy/scp-action@master
