--- a/package.json
+++ b/package.json
@@ -8,24 +8,23 @@
     "build": "vite build",
     "deploy": "node deploy.cjs",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "cd backend && npx nodemon ./backend/server.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.24.0",
-    "cors": "^2.8.5",
+    "@emailjs/browser": "^4.4.1",
+    "@types/react-scroll": "^1.8.10",
+    "clsx": "^2.0.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "lucide-react": "^0.344.0",
-    "mongoose": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.5.0"
+    "react-error-boundary": "^6.0.0",
+    "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
+    "@types/node": "^24.3.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -34,11 +33,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "mongodb": "^4.1.3",
-    "nodemon": "^3.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
