fixed send message

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,61 +1,36 @@
-name: Deploy Frontend
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: ['main']
+
+permissions:
+  contents: write
 
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          
+
       - name: Install Dependencies
         run: npm install
-        
+
       - name: Build
         run: npm run build
 
-      - name: Copy Public Files
-        run: cp -r public/* dist/ || true  # Ensures the workflow doesn't fail if 'public/' doesn't exist
+      - name: Create CNAME
+        run: echo "inzamrzn918.github.io" > dist/CNAME
 
-      - name: Backup and Clean Server
-        uses: appleboy/ssh-action@master
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            if [ -d "/var/www/html" ]; then
-              if [ -d "/var/www/html_backup" ]; then
-                sudo rm -rf /var/www/html_backup
-              fi
-              sudo mv /var/www/html /var/www/html_backup
-            fi
-            sudo mkdir -p /var/www/html
-            sudo chown -R ${{ secrets.SSH_USER }}:$${{ secrets.SSH_USER }} /var/www/html
-
-      - name: Deploy to Server
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          source: "dist/*"
-          target: "/var/www/html/"
-          strip_components: 1
-
-      - name: Enable Apache site
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            sudo systemctl reload apache2
+          folder: dist
+          branch: gh-pages
+          clean: true
