--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "vite-react-typescript-starter",
+  "homepage": "https://inzamrzn918.github.io",
+  "description": "Software Engineer - Inzamul Hoque",
+  "author": "Inzamul Hoque",
+  "license": "MIT",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +12,8 @@
     "build": "vite build",
     "deploy": "node deploy.cjs",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dh": "gh-pages -d build"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -32,6 +37,7 @@
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
