--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.10",
     "clsx": "^2.0.0",
     "dotenv": "^16.0.3",
@@ -25,7 +26,9 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
-    "react-scroll": "^1.9.3"
+    "react-router-dom": "^7.9.1",
+    "react-scroll": "^1.9.3",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
